re PR c++/48969 (ICE with -std=c++0x)

PR c++/48969
	* pt.c (deduction_tsubst_fntype): New.
	(fn_type_unification): Use it.

From-SVN: r173741