gcc/testsuite/g++.dg/cpp0x/decltype26.C
@@ -1,0 +1,16 @@
+// { dg-options -std=c++0x }
+
+struct A { };
+
+template <class T>
+decltype(f(T())) f(T t)
+{
+  return f(t);
+}
+
+int main()
+{
+  f(A());			// { dg-error "no match" }
+}
+
+// { dg-prune-output "note" }
